# bkgexp

./: .dockerignore  README.md  model-test-run.py  pyproject.toml
.github/workflows/: buildDesktop.yml  pushRunpodImage.yml
api/: .env_example  alembic.ini  initialDBSetup.py  main.py  requirements.txt  settings.py
api/alembic/: env.py
api/alembic/versions/: e33da1630f80_initial_migration.py
api/db/: database.py
api/db/crud/: accounting.py  client.py
api/db/models/: accounting.py  client.py  models.py
api/dependencies/: backgroundAccounting.py  imageFilesValidator.py
api/routers/: authentication.py  routers.py
api/routers/admin/: admin.py
api/routers/api/: api.py  images.py  stats.py
api/routers/auth/: auth.py
api/schemas/: accounting.py  auth.py  client.py  runpod.py
api/services/: image.py  runpod.py
api/utils/: hash.py  image.py
desktop/: .gitignore  .prettierignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
desktop/src/: App.tsx  env.d.ts  index.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/auth/: AuthProvider.tsx  Login.tsx  Protected.tsx
desktop/src/components/stats/: Stats.tsx
desktop/src/constants/: constants.ts
desktop/src/queue/: queue.ts
desktop/src/routes/: Login.tsx  Main.tsx
desktop/src/schemas/: schemas.ts
desktop/src/utils/: downloadFile.ts  store.ts
ml/: Dockerfile  handler.py  local_server.py  runner.py  runpodUtils.py  runpod_requirements.txt  test_input.json
ml/model/: model.py  onnx-converter.py  utils.py
